[package]
name = "ureq"
version = "2.4.0"
authors = ["Martin Algesten <martin@algesten.se>", "Jacob Hoffman-Andrews <ureq@hoffman-andrews.com>"]
description = "Simple, safe HTTP client"
license = "MIT/Apache-2.0"
repository = "https://github.com/algesten/ureq"
readme = "README.md"
keywords = ["web", "request", "https", "http", "client"]
categories = ["web-programming::http-client"]
edition = "2018"

[package.metadata.docs.rs]
# Keep in sync with .github/workflows/test.yml
features = ["tls", "native-tls", "json", "charset", "cookies", "socks-proxy"]

[features]
default = ["tls", "gzip"]
tls = ["webpki", "webpki-roots", "rustls"]
native-certs = ["rustls-native-certs"]
json = ["serde", "serde_json"]
charset = ["encoding_rs"]
cookies = ["cookie", "cookie_store"]
socks-proxy = ["socks"]
gzip = ["flate2"]
brotli = ["brotli-decompressor"]
# minerva-voucher-mbedtls-backend = ["minerva-voucher/mbedtls-backend"]

[dependencies]
base64 = "0.13"
chunked_transfer = "1.2"
cookie = { version = "0.15", default-features = false, optional = true}
once_cell = "1"
url = "2"
socks = { version = "0.3", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
encoding_rs = { version = "0.8", optional = true }
cookie_store = { version = "0.15", optional = true, default-features = false, features = ["preserve_order"] }
log = "0.4"
webpki = { version = "0.22", optional = true }
webpki-roots = { version = "0.22", optional = true }
rustls = { version = ">=0.20.1", optional = true }
rustls-native-certs = { version = "0.6", optional = true }
native-tls = { version = "0.2", optional = true }
flate2 = { version = "1.0.22", optional = true }
brotli-decompressor = { version = "2.3.2", optional = true }
#mbedtls = { version = "0.8.1", optional = true }
mbedtls = { version = "0.8.1" }
#====
#minerva-voucher = { optional = true, version = "0.6.1", path="/ssw/projects/trentonio/voucher" }
#minerva-voucher = { version = "0.6.1", path="/ssw/projects/trentonio/voucher" }
#==== WIP
#minerva-mbedtls = { optional = true, git = "https://github.com/AnimaGUS-minerva/minerva-mbedtls", rev = "08437df", features = ["std"] }
#minerva-voucher = { optional = true, git = "https://github.com/AnimaGUS-minerva/voucher", rev = "3761c2a", default-features = false, features = ["std"] }
#==== debug
#minerva-mbedtls = { optional = true, path = "../minerva-mbedtls", features = ["std"] }
minerva-mbedtls = { path = "../minerva-mbedtls", features = ["std"] }
#minerva-voucher = { optional = true, path = "../minerva-voucher", default-features = false, features = ["std"] }
#minerva-voucher = { optional = true, path = "../minerva-voucher" }
minerva-voucher = { path = "../minerva-voucher" }

rand = "0.4"


[dev-dependencies]
serde = { version = "1", features = ["derive"] }
env_logger = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = { version = "0.2" }

[[example]]
name = "smoke-test"

[[example]]
name = "mbedtls-req"
required-features = ["mbedtls"]

[[example]]
name = "bootstrap"
required-features = ["minerva-voucher"]

[[example]]
name = "cureq"
required-features = ["charset", "cookies", "socks-proxy", "native-tls"]
