[package]
name = "bootstrap"
version = "0.1.0"
edition = "2018"
authors = ["ANIMA Minerva Voucher example"]

[dependencies]
ureq            = { path = "../.." }
minerva-voucher = { path = "../../../voucher", default-features = false, features = ["std"] }
mbedtls         = { path = "../../../rust-mbedtls/mbedtls", version = "0.8.1" }
rand = "0.4"
